compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__imported_pattern.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other.{Two}\n\npub fn main(x) {\n  case x {\n    Two(a: 1, ..) -> 1\n    other.Two(b: 2, c: c, ..) -> c\n    _ -> 3\n  }\n}\n"
---
let
  mod''other = builtins.import ./../other.nix;
  inherit (builtins.import ./../other.nix) Two;
  
  main =
    x:
      if x.__gleamTag == "Two" && x.a == 1
      then 1
      else if x.__gleamTag == "Two" && x.b == 2
      then let c = x.c; in c
      else 3;
in { inherit main; }
