compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__imported_using_label.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\npub fn main() {\n  other.Two(field: 1)\n}"
---
let
  other' = builtins.import ./../other.nix;
  
  main = {}: other'.Two 1;
in { inherit main; }
