compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__keyword_label_name.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "pub type Thing {\n  Thing(in: Int, class: Nil)\n}\n"
---
let
  Thing = in': class: { __gleamTag = "Thing"; inherit in' class; };
in { inherit Thing; }
