compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__nested_pattern_with_labels.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "pub type Box(x) { Box(a: Int, b: x) }\nfn go(x) {\n  case x {\n    Box(a: _, b: Box(a: a, b: b)) -> a + b\n    _ -> 1\n  }\n}\n"
---
let
  Box = a: b: { __gleamTag = "Box"; inherit a b; };
  
  go =
    x:
      if x.__gleamTag == "Box" && x.b.__gleamTag == "Box"
      then let a = x.b.a; b = x.b.b; in a + b
      else 1;
in { inherit Box; }
