compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__qualified.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\n\npub fn main() {\n  other.One\n}\n"
---
let
  mod''other = builtins.import ./../other.nix;
  
  main = {}: mod''other.One;
in { inherit main; }
